<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Demo of Xo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Demo by Xo</string>

    <!-- Label of widget activity  -->
    <string name="label_tab_menu">Widget/Tab Menu</string>
    <string name="label_rotation3d_button">Widget/Rotation 3D Button</string>
    <string name="label_viewflipper">Widget/View Flipper</string>

    <!-- Label of sensor activity -->
    <string name="label_flashlight">Sensor/Flash Light</string>
    <string name="label_location">Sensor/Test Location</string>

    <!-- Label of net activity -->
    <string name="label_wifi_direct">Net/Wifi Direct</string>

    <!-- Label of hello world activity -->
    <string name="label_jni">Hello World/JNI</string>
    <string name="label_aidl">Hello World/Service</string>
    <string name="label_gif">Hello World/GIF</string>
    <string name="label_nfc">Hello World/NFC</string>
    <string name="label_deviceinfo">Hello World/Device Info</string>
    <string name="label_parcelable">Hello World/Parcelable</string>
    <string name="label_account">Hello World/Account</string>
    <string name="label_statemachine">Hello World/State Machine</string>
    <string name="label_io">Hello World/IO</string>

	<string name="label_binder">Refine/Binder</string>
	<string name="label_injector">Refine/Injector</string>
	<string name="label_annotation">Refine/Annotation</string>

    <!-- Label of tool activity -->
    <string name="label_reflect">Tool/Reflect</string>
    <string name="label_againstcrack">Tool/Against Crack</string>
    <string name="label_usagestats">Tool/Usage Statistic</string>
    <string name="label_reflect_usagestats">Tool/Relect Usage Statistic</string>

    <!-- Label of advertisement activity -->
    <string name="label_mobclix">Advertisement/Mobclix</string>
    <string name="label_youmi">Advertisement/Youmi</string>

    <!-- ================= Useful string ================= -->
    <!-- Tab menu -->
    <string name="tab_menu_expression">Tab 1</string>
    <string name="tab_menu_attachment">Tab 2</string>
    <string name="tab_menu_choice">Tab 3</string>

    <!-- Location -->
    <string name="location_succ">Latitude: <xliff:g id="lat">%s</xliff:g>\nLongtitude: <xliff:g id="long">%s</xliff:g></string>
    <string name="location_fail">Locate failed</string>
    <string name="location_time">Cost Time is <xliff:g id="lat">%s</xliff:g> seconds.</string>

    <!-- Service -->
    <string name="service_remote_info">Remote Info\n Pid : <xliff:g id="pid">%s</xliff:g>\n Uid : <xliff:g id="uid">%s</xliff:g>\n Tid : <xliff:g id="tid">%s</xliff:g></string>
    <string name="service_local_info">Local Info\n Pid : <xliff:g id="pid">%s</xliff:g>\n Uid : <xliff:g id="uid">%s</xliff:g>\n Tid : <xliff:g id="tid">%s</xliff:g></string>

    <!-- Flashlight -->
    <string name="flash_window">Flash Window</string>
    <string name="flash_camera">Flash Camera</string>
    <string name="sos_window">SOS Window</string>
    <string name="stop_flash">Stop</string>

    <!-- Account -->
    <string name="hello_account_title">Hello Account</string>
    <string name="hello_account_summary">Goto Hello Account</string>
    <string name="add_account">Add Account</string>
    <string name="rem_account">Remove Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_type">Account Type</string>
    <string name="account_password">Password</string>
    <string name="invalid_account_type_toast">Account Type should be org.xo</string>
    <string name="account_already_exists">Account already exists.</string>

    <!-- Reflect -->
    <string name="input_class_name">Input Class Name</string>
    <string name="input_field_name">Input Field Name</string>
    <string name="input_method_name">Input Method Name</string>
    <string name="query_result">Query Result</string>

    <!-- Against Crack -->
    <string name="signature">[Signature] : </string>
    <string name="crc">[CRC] : </string>

    <!-- Advertisement -->
    <string name="youmi_description">This is a demo for advertisement provided by YouMi.</string>

    <!-- IO -->
    <string name="input_the_directory">Input the Directory</string>
    <string name="no_files">No files in the directory</string>
</resources>