<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flash_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/btn_flash_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/flash_window"
            android:textOn="@string/stop_flash" />

        <ToggleButton
            android:id="@+id/btn_sos_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/sos_window"
            android:textOn="@string/stop_flash" />

        <ToggleButton
            android:id="@+id/btn_flash_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/flash_camera"
            android:textOn="@string/stop_flash" />
    </LinearLayout>

</RelativeLayout>